--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "react-redux": "^9.2.0",
+    "@reduxjs/toolkit": "^2.5.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
